# webcam-weather

./: .gitignore  README.md  pyproject.toml  sample.env  scp_file.sh  setup.sh  upload_extension.sh
axis_camera_overlay/: install.py  test_service.py
tests/: test_hello.py
weewx/: axis_camera_overlay.py
weewx_axis/: axis_camera_overlay.py  test_service.py
