[tool.poetry]
name = "python-template"
packages = [
    { include = "src" }
]
version = "0.1.0"
description = "Simple Python project template"
authors = ["Liz Stanley <lizmstanley@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "1.0.1"
toml = "^0.10.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
pytest-mock = "^3.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"